# Data-Compliance-Agent

./: .env.example  .gitignore  AGENT_BUILDING_GUIDE.md  CLAUDE.md  README.md  demo.bat  design-picker.html  main.py  pyproject.toml  run_hi_small.py  run_intercept.py  run_scan.py  violations.db
.claude/: settings.local.json
agent-chat-ui/: package.json  pnpm-lock.yaml
agent-chat-ui/app/: globals.css  layout.tsx  page.tsx
agent-chat-ui/components/: HitlModal.tsx  HitlStream.tsx  ScoreGauge.tsx  ServerHealth.tsx  (+2 more)
data/: HI-Small_Trans.db  compliance_report_print.html  compliance_report_scan_20260221_145644_f714b270.html  compliance_report_scan_20260221_210829_7bf677bf.html  compliance_report_scan_20260222_032445_251eeabd.html  compliance_report_scan_20260222_050357_b1dda2be.html  compliance_report_scan_20260222_051339_a5f2af3a.html  compliance_report_scan_20260417_074810_207bda72.html  compliance_report_scan_20260417_075833_cef9622c.html  compliance_report_scan_20260417_080042_3e10a3f9.html  compliance_report_scan_20260418_075709_c4b9e801.html  compliance_report_scan_20260418_082629_492a712b.html  compliance_report_scan_20260418_083556_7afe9797.html  interceptor_audit.db
frontend/: dashboard.html  index.html  scan.html  styles.css
notebooks/: agent_nodes_prototype.ipynb  rule_extraction.ipynb
report/: 00_cover_and_toc.md  01_synopsis.md  02_introduction.md  03_design.md  04_implementation.md  05_testing.md  06_conclusion_future.md  07_references.md  README.md
scripts/: __init__.py  clean_cache.ps1  generate_policy_pdf.py  prewarm_demo.py  smoke_graph_e2e.py
(+104 files in other folders)
