[project]
name = "data-compliance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastembed>=0.7.4",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "mem0ai>=1.0.4",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "pytest>=9.0.2",
    "qdrant-client>=1.17.0",
    "redis>=7.2.0",
    "reportlab>=4.4.10",
    "rich>=14.3.3",
    "sentence-transformers>=5.2.3",
    "sqlmodel>=0.0.35",
]
